--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an Electronics Engineer with specialization in VLSI Design</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>India</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love playing Sudoku</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Making optimized Devices</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Seattle, WA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To enhance my skillsets</p>
     </section>
 
     <footer id="footer">
